<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shelfie</string>
    <string name="edit_shelf">Shelf</string>
    <string name="make_list">Groceries</string>
    <string name="new_item">Add supply</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="test">Example</string>
    <string name="example">3</string>
    <string name="increase_desired_amt">Increase desired amount</string>
    <string name="decrease_desired_amt">Decrease desired amount</string>
    <string name="delete_item_confirm">Remove from desired supplies?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="make_grocery_list">Groceries</string>
    <string name="edit_shelf_title">Edit supplies</string>
    <string name="do_we_still_have">Do we need this?</string>
    <string name="shelf_is_empty">Desired supply is empty, you can only add custom groceries</string>
    <string name="delete_grocery_confirm">Remove from grocery list?</string>
    <string name="importing">Importing</string>
    <string name="import_failed">Import failed</string>
    <string name="import_ok">Import OK</string>
    <string name="export_shelf">Share shelf</string>
    <string name="export_failed">Share failed</string>
    <string name="share_subject">I would like to share a Shelfie shelf with you</string>
    <string name="share_title">Share shelf</string>
    <string name="exporting">Sharing shelf</string>
    <string name="via">on</string>
    <string name="add_shelf">Add shelf</string>
    <string name="save">Save</string>
    <string name="shelf_name">Name for new shelf</string>
    <string name="delete_groceries">Delete grocery list</string>
    <string name="share">Share</string>
    <string name="share_groceries_subject">The Groceries</string>
    <string name="share_groceries_title">Share the groceries</string>
    <string name="send">Mail grocery list</string>
    <string name="default_shelf">Basic supplies</string>
    <string name="overwrite_shelf">Overwrite shelf</string>
    <string name="overwrite_shelf_confirm">Shelf has the same name as your own, would you like to overwrite it?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="import_canceled">Import canceled</string>
    <string name="import_with_new_name">Import as new shelf</string>
    <string name="delete_shelf">Delete shelf</string>
    <string name="uneedaleastoneshelf">Shelfie requires at least one shelf</string>
    <string name="delete_shelf_confirm">Delete shelf, are you sure?</string>
    <string name="add_grocery">Add grocery</string>
    <string name="grocery_hint">enter name</string>
    <string name="delete_groceries_confirm">Are you sure you want to clear your grocery list</string>
    <string name="welcome">Welcome to Shelfie</string>
    <string name="start_now_by">Start with a basic supply under \'Edit supplies\'</string>
    <string name="start_now_by_2">And start a grocery list under \'Groceries\'</string>
    <string name="start_now_by_3">Making a grocery list is fastest with a basic supply</string>
    <string name="start_now_by_3_a">Remove an item from the supply or grocery-list by pressing and holding it for a longer period of time</string>
    <string name="start_now_by_4">You can add a new shelf using the plus icon under  \'Edit supplies\'</string>
    <string name="start_now_by_5">And you can select a shelf in the box above this info text</string>
    <string name="start_now_by_6">And delete the selected shelf using the trash can in \'Edit supplies\'</string>
    <string name="start_now_by_7">In \'Groceries\' the trash can just clears the grocery list</string>
    <string name="start_now_by_8">And the plus icon under groceries allows you to add a custom grocery item to the list</string>
    <string name="start_now_by_9">You can share the selected shelf using the share icon</string>
    <string name="start_now_by_10">A shared Shelfie hyperlink can be opened directly by Shelfie on your Android device</string>
    <string name="start_now_by_11">You can also email your grocery-list using the email icon</string>
    <string name="selected_shelf">This shelf</string>
    <string name="top_feature_reqs">Top Feature Requests</string>
    <string name="number_of_votes">Number of votes</string>
    <string name="default_store">Shop…</string>
    <string name="new_store_hint">Name</string>
    <string name="add_store_title">Add new shop</string>
    <string name="delete_store_confirm">Are you sure you want to delete this shop? It will be deleted from all shelf
        items referring to it.
    </string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="info">Information</string>
    <string name="drop_info">Remove</string>
    <string name="sync_groceries">Sync groceries</string>
    <string name="no_faye_connect">Sync service disconnected</string>
</resources>
