<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/email_menu_button"
          android:icon="@drawable/main_menu_email"
          android:title="@string/send"
          android:showAsAction="always" />



    <item android:id="@+id/share_menu_button"
          android:icon="@drawable/main_menu_share"
          android:title="@string/share"
          android:showAsAction="always" />

    <item android:title="@string/sync_groceries"
          android:id="@+id/sync_groceries"
          android:icon="@drawable/grocery_sync"
          android:showAsAction="always"  />

    <item android:title="@string/delete_groceries"
          android:id="@+id/main_menu_delete"
          android:icon="@drawable/main_menu_delete"
          android:showAsAction="always"  />

    <item android:id="@+id/add_something"
          android:icon="@drawable/main_menu_plus"
          android:title="@string/add_shelf"
          android:showAsAction="always" />

</menu>