<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="5dp">
        <ImageButton
                android:id="@+id/prevButt"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="-5dip"
                android:layout_marginLeft="-5dip"
                android:focusableInTouchMode="false"
                android:src="@drawable/menu_arrow_left"
                android:contentDescription="@string/prev"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/amount"
                />
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:layout_weight="1"
                      android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/itemName"
                    android:singleLine="false"
                    android:layout_marginLeft="3dp"
                    />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/storeName"
                    android:singleLine="false"
                    android:layout_marginLeft="3dp"
                    />

        </LinearLayout>
        <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="-5dip"
                android:layout_marginLeft="-5dip"
                android:contentDescription="@string/increase_desired_amt"
                android:id="@+id/plusButton" android:src="@drawable/menu_plus"/>
        <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="-5dip"
                android:layout_marginLeft="-5dip"
                android:contentDescription="@string/decrease_desired_amt"
                android:src="@drawable/menu_minus" android:id="@+id/minusButton"
                android:focusableInTouchMode="false"/>
        <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="-5dip"
                android:layout_marginLeft="-5dip"
                android:id="@+id/nextButt"
                android:src="@drawable/menu_arrow_right"
                android:contentDescription="@string/next"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/do_we_still_have"
                android:id="@+id/needed"
                android:layout_weight="1"
                />
        <Button
                android:layout_marginTop="-5dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:id="@+id/noButt"/>
        <Button
                android:layout_marginTop="-5dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:id="@+id/yesButt"/>
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/shelfie_dark_blue"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/grocery_list"/>
    </LinearLayout>
</LinearLayout>