<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <!-- begin row -->
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                    android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/info"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
android:paddingTop="4dp"
android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"

                          android:text="@string/welcome"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />
            <!-- end row -->
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/info"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:paddingTop="4dp"
                          android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"

                          android:text="@string/start_now_by"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/info"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
android:paddingTop="4dp"
android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"

                          android:text="@string/start_now_by_2"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/info"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
android:paddingTop="4dp"
android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"

                          android:text="@string/start_now_by_3"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/info"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:paddingTop="4dp"
                          android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"

                          android:text="@string/start_now_by_3_a"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/main_menu_plus"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
android:paddingTop="4dp"
android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"
                          android:text="@string/start_now_by_4"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/info"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
android:paddingTop="4dp"
android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"

                          android:text="@string/start_now_by_5"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/main_menu_delete"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
android:paddingTop="4dp"
android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"

                          android:text="@string/start_now_by_6"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/main_menu_delete"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
android:paddingTop="4dp"
android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"

                          android:text="@string/start_now_by_7"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/main_menu_plus"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
android:paddingTop="4dp"
android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"
                          android:text="@string/start_now_by_8"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/main_menu_share"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
android:paddingTop="4dp"
android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"
                          android:text="@string/start_now_by_9"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/main_menu_share"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
android:paddingTop="4dp"
android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"
                          android:text="@string/start_now_by_10"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="top">
                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/main_menu_email"
                        />
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:paddingTop="4dp"
                          android:paddingBottom="4dp"
                          android:layout_marginLeft="12dp" android:layout_marginRight="4dp"
                          android:text="@string/start_now_by_11"/>
            </LinearLayout>
            <View android:layout_height="1dp"
                  android:layout_width="match_parent"
                  android:background="@color/shelfie_darkest_blue"
                    />
        </LinearLayout>

    </ScrollView>

</LinearLayout>
